--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,17 +1,17 @@
 {
   "dependencies": {
-    "com.unity.2d.animation": "10.2.0",
-    "com.unity.2d.aseprite": "1.2.4",
-    "com.unity.2d.psdimporter": "10.1.0",
+    "com.community.netcode.transport.facepunch": "https://github.com/Unity-Technologies/multiplayer-community-contributions.git?path=/Transports/com.community.netcode.transport.facepunch",
+    "com.unity.2d.animation": "12.0.2",
+    "com.unity.2d.aseprite": "2.0.1",
+    "com.unity.2d.psdimporter": "11.0.1",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "10.1.0",
+    "com.unity.2d.spriteshape": "12.0.1",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.2d.tilemap.extras": "4.3.0",
+    "com.unity.2d.tilemap.extras": "5.0.1",
     "com.unity.cinemachine": "3.1.4",
     "com.unity.dedicated-server": "1.6.1",
-    "com.unity.ide.rider": "3.0.36",
     "com.unity.ide.visualstudio": "2.0.23",
-    "com.unity.inputsystem": "1.14.0",
+    "com.unity.inputsystem": "1.14.2",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.multiplayer.center.quickstart": "1.0.1",
     "com.unity.multiplayer.playmode": "1.6.1",
@@ -19,10 +19,10 @@
     "com.unity.multiplayer.widgets": "1.0.1",
     "com.unity.netcode.gameobjects": "2.5.1",
     "com.unity.render-pipelines.universal": "17.2.0",
-    "com.unity.test-framework": "1.5.1",
-    "com.unity.timeline": "1.8.7",
+    "com.unity.test-framework": "1.6.0",
+    "com.unity.timeline": "1.8.9",
     "com.unity.ugui": "2.0.0",
-    "com.unity.visualscripting": "1.9.6",
+    "com.unity.visualscripting": "1.9.7",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
